<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/a_banker"
            android:scaleType="center"
            android:src="@drawable/ic_money" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="55dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hitrost_banking"
            android:fontFamily="@font/mpsrounded"
            android:textColor="@color/text_dark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/text_dark"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/bg_text"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/get_started"
        android:fontFamily="@font/mpsrounded"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>